--- a/OBS_browser/rtcClient-GUM.html
+++ b/OBS_browser/rtcClient-GUM.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>webRTC client</title>
+  <title>webRTC GUM client</title>
 
   <style>
     video {
@@ -27,6 +27,7 @@
   <script src="lib/webRTC-Client-connect.js"></script>
   <script src="lib/pose-module.js" type="module"></script>
 
+  
   <!-- your javascript goes here -->
   <!-- <script></script> -->
 </body>
