--- a/wss_Clients/Interfaces_sketches/Interfaces_p5_code-tornado_taz-live.html
+++ b/wss_Clients/Interfaces_sketches/Interfaces_p5_code-tornado_taz-live.html
@@ -5,8 +5,8 @@ http://interfaces.dynv6.net/p5_playground/index_html -->
 <html>
 
 <head>
-  <script src="p5.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="../lib/p5.js"></script>
+  <link rel="stylesheet" type="text/css" href="../style.css">
   <meta charset="utf-8" />
 
 </head>
