--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YL858H3N2E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YL858H3N2E');
+</script>
 <link href="lib/style.css" rel="stylesheet" type="text/css" />
 <body>
     <nav class="toc">
