Websocket test file

--- a/obs_browser_examples/webSocketTester.html
+++ b/obs_browser_examples/webSocketTester.html
@@ -99,9 +99,9 @@
       <p id="ptz-position-message">    </p>
     </div>
   </section>
-  <script src="obs-ws.js"></script>
-  <script src="obsConnect.js"></script>
-  <script src="webSocketTester.js"></script>
+  <script src="lib/obs-ws.js"></script>
+  <script src="lib/obsConnect.js"></script>
+  <script src="lib/webSocketTester.js"></script>
   
   <script>
     window.addEventListener(`ws-details`, async function (event) {
