mediaPipe landmark updates

--- a/obs_browser_examples/webSocketTester.html
+++ b/obs_browser_examples/webSocketTester.html
@@ -71,6 +71,14 @@
     <div class="content">
       <p id="poseResults">    </p>
     </div>
+    <button type="button" class="collapsible">MediaPipe Hand Detection</button>
+    <div class="content">
+      <p id="handResults">    </p>
+    </div>
+    <button type="button" class="collapsible">MediaPipe Face Detection</button>
+    <div class="content">
+      <p id="faceResults">    </p>
+    </div>
     <button type="button" class="collapsible">MediaPipe Text Sentiment</button>
     <div class="content">
       <p id="sentimentResult">    </p>
