--- a/obs_browser_examples/webSocketTester.html
+++ b/obs_browser_examples/webSocketTester.html
@@ -79,6 +79,10 @@
     <div class="content">
       <p id="faceResults">    </p>
     </div>
+    <button type="button" class="collapsible">Speech Recognition</button>
+    <div class="content">
+      <p id="speechRecognition">    </p>
+    </div>
     <button type="button" class="collapsible">MediaPipe Text Sentiment</button>
     <div class="content">
       <p id="sentimentResult">    </p>
