added shortcuts Input

--- a/index.html
+++ b/index.html
@@ -251,6 +251,16 @@ OBS browsers" />
                 </div>
             </div>
         </section>
+        
+    <section>
+        <div>
+        <h1>Apple Shortcuts Input</h1>
+        <div id="apple-shortcuts">
+            <p>Results from Apple Shortcuts</p>
+            <textarea id="shortcutsInput" style="height: 300px; width: 600px"></textarea>
+        </div>
+    </section>
+
     </article>
 
     <script src='lib/obs-ws.js'></script>
@@ -263,6 +273,12 @@ OBS browsers" />
     <script src="lib/audioInput-renderer.js"></script>
     <script src="lib/SpeechRecognition.js"></script>
     <script src="lib/loadScripts.js"></script>
+    <script src="lib/shortcutsScripts.js"></script>
+    <script>
+        function alertTest(){
+            window.alert("Hi Friend")
+        }
+    </script>
 
 </body>
 </html>
