mouse Input for mac

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
                         <li><a href="#mp-gemma">Gemma<br>LLM Inference</a></li>
                     </ul>
                 </li>
+                <li>
+                    <a href="#shortcuts">Apple Shortcuts</a>
+                    <ul>
+                        <li><a href="#apple-shortcuts">Shortcuts Input<br></a></li>
+                    </ul>
+                </li>
             </ul>
             
     </nav>
