--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ OBS browsers" />
             console.log("page is fully loaded");
             const params = new URLSearchParams(window.location.search); //parse params
             const q = params.get("q"); //get q param
-        document.getElementbyid("PW").value = q; //assign q value to input when loading
+        document.getElementbyId("PW").value = q; //assign q value to input when loading
         });
     </script>
 
