--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     <ul>
                         <li><a href="#mouse-shortcuts">Mouse<br></a></li>
                         <li><a href="#ptz-shortcuts">PTZ<br></a></li>
+                        <li><a href="#keynote-shortcuts">Keynote Notes<br></a></li>
                     </ul>
                 </li>
             </ul>
@@ -269,6 +270,10 @@ OBS browsers" />
         <div id="ptz-shortcuts">
             <p>PTZ coordinates</p>
             <textarea id="ptzValues" style="height: 100px; width: 600px"></textarea>
+        </div>
+        <div id="keynote-shortcuts">
+            <p>Keynotes Notes</p>
+            <textarea id="keynoteNotes" style="height: 100px; width: 600px"></textarea>
         </div>
     </section>
 
