GUM Slide Messages

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li><a href="#mp-face-detect">Face Landmark<br>Detection</a></li>
                         <li><a href="#mp-segmentation-detect">Image Segmentation</a></li>
                         <li><a href="#mp-sentiment-analysis">Text Sentiment</a></li>
-                        <li><a href="#mp-gemma">Gemma<br>LLM Inference</a></li>
+                        <li Hidden><a href="#mp-gemma">Gemma<br>LLM Inference</a></li>
                     </ul>
                 </li>
                 <li>
@@ -52,6 +52,7 @@
                         <li><a href="#mouse-shortcuts">Mouse<br></a></li>
                         <li><a href="#ptz-shortcuts">PTZ<br></a></li>
                         <li><a href="#keynote-shortcuts">Keynote Notes<br></a></li>
+                        <li><a href="#powerPoint-shortcuts">PowerPoint Notes<br></a></li>
                     </ul>
                 </li>
             </ul>
@@ -234,7 +235,7 @@ OBS browsers" />
                 </div>
             </div>
             
-            <div>
+            <div Hidden>
                 <h1>MediaPipe Gemma LLM Inference</h1>
                 <div id="mp-gemma">
                     <input type="button" class="form-button" id="startLLM" value="Start Gemma" />
@@ -274,6 +275,10 @@ OBS browsers" />
         <div id="keynote-shortcuts">
             <p>Keynotes Notes</p>
             <textarea id="keynoteNotes" style="height: 100px; width: 600px"></textarea>
+        </div>
+        <div id="powerPoint-shortcuts">
+            <p>PowerPoint Notes</p>
+            <textarea id="powerPointNotes" style="height: 100px; width: 600px"></textarea>
         </div>
     </section>
 
