slide notes to text source

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ OBS browsers" />
             <textarea id="mouseCoordinates" style="height: 100px; width: 600px"></textarea>
         </div>
         <div id="ptz-shortcuts">
-            <p>PTZ coordinates</p>
+            <p>PTZ coordinates</p><p id="loopStatus"></p>
             <textarea id="ptzValues" style="height: 100px; width: 600px"></textarea>
         </div>
         <div id="keynote-shortcuts">
