connect when pw param true

--- a/index.html
+++ b/index.html
@@ -293,6 +293,8 @@ OBS browsers" />
             //assign pw value to input when loading
             if(pw){
                 document.getElementById("PW").value = pw; 
+                document.getElementById("WSconnectButton").click(); 
+
             }
             if(wd){
                 document.getElementById("WorkingDirectory").innerHTML = wd; 
