hide mouse coordinates input

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ OBS browsers" />
                 </div>
             </div>
             
-            <div Hidden>
+            <div hidden>
                 <h1>MediaPipe Gemma LLM Inference</h1>
                 <div id="mp-gemma">
                     <input type="button" class="form-button" id="startLLM" value="Start Gemma" />
@@ -264,7 +264,7 @@ OBS browsers" />
     <section>
         <div>
         <h1>Apple Shortcuts Input</h1>
-        <div id="mouse-shortcuts">
+        <div id="mouse-shortcuts" hidden>
             <p>Mouse coordinates</p>
             <textarea id="mouseCoordinates" style="height: 100px; width: 600px"></textarea>
         </div>
