--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ OBS browsers" />
             <textarea id="ptzValues" style="height: 100px; width: 600px"></textarea>
         </div>
         <div id="keynote-shortcuts">
-            <p>Keynotes Notes</p>
+            <p>Keynote Notes</p>
             <textarea id="keynoteNotes" style="height: 100px; width: 600px"></textarea>
         </div>
         <div id="powerPoint-shortcuts">
