scene collection feature

--- a/index.html
+++ b/index.html
@@ -281,6 +281,20 @@ OBS browsers" />
             <textarea id="powerPointNotes" style="height: 100px; width: 600px"></textarea>
         </div>
     </section>
+    
+    <section>
+        <div>
+        <h1>OBS Scenes and Sources</h1>
+        <div id="obs-scenes">
+            <p>OBS Scenes and Sources</p>
+            <pre><code class="language-json" id="scenesList">.some-box {
+                width: 20px;
+                height: 20px;
+                background: black;
+                margin-bottom: 1.5rem;
+            }
+            </code></pre>
+    </section>
 
     </article>
 
@@ -313,6 +327,7 @@ OBS browsers" />
     <script src="lib/SpeechRecognition.js"></script>
     <script src="lib/loadScripts.js"></script>
     <script src="lib/shortcutsScripts.js"></script>
+    <script src="lib/obsScenes.js"></script>
 
 </body>
 </html>
