table of content update

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
                         <li><a href="#powerPoint-shortcuts">PowerPoint Notes<br></a></li>
                     </ul>
                 </li>
+                <li>
+                    <a href="#obs-scenes">OBS</a>
+                    <ul>
+                        <li><a href="#mouse-shortcuts">Scenes and Sources<br></a></li>
+                    </ul>
+                </li>
             </ul>
             
     </nav>
