--- a/index.html
+++ b/index.html
@@ -334,7 +334,15 @@ OBS browsers" />
     <script src="lib/loadScripts.js"></script>
     <script src="lib/shortcutsScripts.js"></script>
     <script src="lib/obsScenes.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YL858H3N2E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-YL858H3N2E');
+</script>
 </body>
 </html>
 
