--- a/obs_browser_examples/Interfaces_p5_code-rlb2-live.html
+++ b/obs_browser_examples/Interfaces_p5_code-rlb2-live.html
@@ -6,7 +6,7 @@ http://interfaces.dynv6.net/p5_playground/index_html -->
 
 <head>
   <script src="lib/p5.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
   <meta charset="utf-8" />
 
 </head>
