--- a/obs_browser_examples/webSocketTester.html
+++ b/obs_browser_examples/webSocketTester.html
@@ -105,6 +105,7 @@
       <button type="button" id="lowerHands">Lower all hands</button>
       <button type="button" id="turnOnVideo">Turn on Video</button>
       <button type="button" id="sendChat">Send Chat</button>
+      <button type="button" id="getPTZ">Get Camera Position</button>
     </div>
     <button type="button" class="collapsible">PTZ Data</button>
     <div class="content">
